--- a/retail/artifacts/storageassets/incident-search/detail_withoutreplacement.html
+++ b/retail/artifacts/storageassets/incident-search/detail_withoutreplacement.html
@@ -78,8 +78,8 @@
         const pdflink = urlParams.get("pdf");
 
        // let {PDFblobInput, PDFblobOutput}  = window['runConfig']
-       PDFblobInput="https://stretailprod.blob.core.windows.net/incidentreportpdf/"
-       PDFblobOutput="https://stretailprod.blob.core.windows.net/incidentreportjson/"
+       PDFblobInput="https://#STORAGE_ACCOUNT_NAME#.blob.core.windows.net/202045152/"
+       PDFblobOutput="https://#STORAGE_ACCOUNT_NAME#.blob.core.windows.net/202045152/"
         let pdfembed = '<embed src="'.concat(
           PDFblobInput+pdflink,
           '.pdf" width="500" height="770" type="application/pdf" role="presentation"></embed>'
